[gd_scene load_steps=5 format=3 uid="uid://daouegvnbl4wt"]

[ext_resource type="FontFile" uid="uid://dtp2nbohivb28" path="res://font/Minecraft.ttf" id="1_hu0rb"]
[ext_resource type="Script" path="res://scripts/win.gd" id="1_i0ipm"]

[sub_resource type="LabelSettings" id="LabelSettings_r488y"]
font = ExtResource("1_hu0rb")
font_size = 40
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_e2njo"]
font = ExtResource("1_hu0rb")
font_size = 24
font_color = Color(0, 0, 0, 1)

[node name="Control" type="CanvasLayer"]
layer = 20
script = ExtResource("1_i0ipm")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -305.0
offset_top = -18.0
offset_right = 305.0
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
text = "You've survived through the winter"
label_settings = SubResource("LabelSettings_r488y")

[node name="back_to_menu" type="Button" parent="."]
process_mode = 3
clip_contents = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 278.0
offset_top = 233.0
offset_right = 518.0
offset_bottom = 277.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_hu0rb")
theme_override_font_sizes/font_size = 30
text = "Back to menu"

[node name="kill_count" type="Label" parent="."]
offset_left = 246.0
offset_top = 377.0
offset_right = 443.0
offset_bottom = 401.0
text = "Enemies defeat: "
label_settings = SubResource("LabelSettings_e2njo")

[node name="ammo_used" type="Label" parent="."]
offset_left = 297.0
offset_top = 414.0
offset_right = 465.0
offset_bottom = 438.0
text = "Ammo used:"
label_settings = SubResource("LabelSettings_e2njo")

[connection signal="pressed" from="back_to_menu" to="." method="_on_button_pressed"]
